initial backup commit

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -76,7 +76,7 @@ ul {
 header {
     width: 100%;
     height: 100vh;
-    background-image: url("../img/back/1.jpg");
+    background-image: url("../img/welcome/back2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
