--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,5 @@
 $black: #000000;
-$background: #313536;
+$background: #2e2152;
 $white: #E5E5E5;
 $fontFamily1: 'Open Sans', sans-serif;
 $fontFamily2: 'Montserrat', sans-serif;
