--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ ul {
 header {
   width: 100%;
   height: 100vh;
-  background-image: url("../img/back/1.jpg");
+  background-image: url("../img/welcome/back2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -80,7 +80,7 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: #313536;
+  background: #2e2152;
   padding: 10rem 20rem 0 20rem;
   text-align: center;
   color: #E5E5E5;
@@ -139,7 +139,6 @@ header {
   top: -2.5rem;
   left: -9%;
   content: url("../img/design.svg");
-  color: #E5E5E5;
   width: 5rem;
   height: 5rem;
 }
@@ -188,7 +187,7 @@ header {
   position: absolute;
   height: 84%;
   width: 84%;
-  background-color: #313536;
+  background-color: #2e2152;
   border-radius: 50%;
   -webkit-transform: translate(-50, -50);
           transform: translate(-50, -50);
