parallax done,minor changes

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,8 @@
 $black: #000000;
-$background: #2e2152;
+$background: #161240;
 $white: #E5E5E5;
+$pureWhite: #ffffff;
+$gradient1: #2b1055;
+$gradient2 : #7597de;
 $fontFamily1: 'Open Sans', sans-serif;
 $fontFamily2: 'Montserrat', sans-serif;
