--- a/styles/style.scss
+++ b/styles/style.scss
@@ -142,11 +142,104 @@ header::before {
     width: 100%;
     height: 10rem;
     background: linear-gradient(to top, $background, transparent);
-    z-index: 1000;
+    z-index: 99;
 }
 
+.back-to {
+    position: fixed;
+    z-index: 100;
+    right: 0;
+    bottom: 0;
 
-.about-me, .skills {
+    div {
+        margin: 3rem ;
+        padding: 2rem 4rem;
+        -webkit-transition: all 0.5s ease-in-out;
+        -moz-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+
+        a {
+            width: 100%;
+            height: auto;
+            font-size: 3rem;
+            @extend %flex-space-between;
+            flex-direction: column;
+            justify-content: center;
+            animation: rocketLaunched 0.5s  linear infinite;
+            
+            #fire {
+                color: rgb(255, 123, 0);
+                margin-left: 0.2rem;
+                animation: fire 3s  linear infinite;
+            }
+
+            #rocket {
+                -webkit-text-stroke: 1px white;
+                color: $gradient1;
+            }
+            
+            .to-bottom {
+                transform: rotate(90deg);
+            }
+
+            .to-top {
+                transform: rotate(270deg);
+            }
+
+            @keyframes rocketLaunched {
+                0% {
+                    transform: translate(0,0);
+                }
+                20% {
+                    transform: translate(-2px, 0);
+                }
+                40% {
+                    transform: translate(0,-1px);
+                }
+                60% {
+                    transform: translate(0,0);
+                }
+                80% {
+                    transform: translate(2px, 0);
+                }
+                100% {
+                    transform: translate(0, 1px);
+                }
+            }
+
+            @keyframes fire {
+                0% {
+                    transform: scaleY(1);
+                    font-size: 3rem;
+                    color: rgb(255, 123, 0);
+                }
+                25% {
+                    transform: scaleY(1.25);
+                    font-size: 2.5rem;
+                    color: rgb(255, 102, 0);
+                }
+                50% {
+                    transform: scaleY(1.5);
+                    font-size: 3rem;
+                    color: rgb(255, 81, 0);
+                }
+                75% {
+                    transform: scaleY(1.25);
+                    font-size: 2.5rem;
+                    color: rgb(255, 102, 0);
+                }
+                100% {
+                    transform: scaleY(1);
+                    font-size: 3rem;
+                    color: rgb(255, 123, 0);
+                }
+            }
+        }
+    }
+}
+
+.about-me, .skills, .contact-me, .footer {
     @extend %flex-space-between;
     justify-content: center;
     flex-direction: column;
@@ -161,6 +254,7 @@ header::before {
 .skills {
     padding: 0rem 20rem 0 20rem;
 }
+
 .about-me {  
     &__text , &__text2 {
         margin-bottom: 8rem;
@@ -266,3 +360,102 @@ header::before {
 }
 
 
+.footer {
+    bottom: 0;
+    overflow-y: hidden;
+    width: 100%;
+
+    p {
+        margin-bottom: 2.5rem;
+
+        i, span {
+            color: gold;
+            font-size: 2.2rem;
+        }
+        
+        i {
+            -webkit-text-stroke: 1px $pureWhite;
+            background: linear-gradient(90deg, #ff0000, #ffff00, #ff00f3, #0033ff, #ff00c4, #ff0000);
+            -webkit-text-fill-color: transparent;
+            background-size: 400%;
+            background-clip: text;
+            -webkit-background-clip: text;
+            animation: heartBeating 5s 1.2s linear infinite;
+        }
+
+        span {
+            background: linear-gradient(90deg, #ff0000, #ffff00, #ff00f3, #0033ff, #ff00c4, #ff0000);
+            -webkit-text-fill-color: transparent;
+            background-size: 400%;
+            background-clip: text;
+            -webkit-background-clip: text;
+            animation: rainbow 5s linear infinite;
+        }
+
+        @keyframes heartBeating {
+            0% {
+                background-position: 400%;
+                transform: scale(1,1); 
+                margin: 0 0;
+            }
+            25% {
+                background-position: 300%;
+                transform: scale(1.3,1.3); 
+                margin: 0 .5rem;
+            }
+            50% {
+                background-position: 200%;
+                transform: scale(1.6,1.6); 
+                margin: 0 1rem;
+            }
+            75% {
+                background-position: 100%;
+                transform: scale(1.3,1.3); 
+                margin: 0 .5rem;
+            }
+            100% {
+                background-position: 0%;
+                transform: scale(1,1); 
+                margin: 0 0;
+            }
+        }
+
+        // @keyframes heartBeating {
+        //     0% {
+        //         transform: scale(1,1); 
+        //         margin: 0 0;
+        //         color: gold; 
+        //     }
+        //     25% {
+        //         transform: scale(1.3,1.3); 
+        //         margin: 0 .5rem;
+        //         color: orange;
+        //     }
+        //     50% {
+        //         transform: scale(1.6,1.6); 
+        //         margin: 0 1rem;
+        //         color: red;
+        //     }
+        //     75% {
+        //         transform: scale(1.3,1.3); 
+        //         margin: 0 .5rem;
+        //         color: orange;
+        //     }
+        //     100% {
+        //         transform: scale(1,1); 
+        //         margin: 0 0;
+        //         color: gold;
+        //     }
+        // }
+
+        // Change from 0 to 400 if there is error
+        @keyframes rainbow {
+            0% {
+                background-position: 400%;
+            }
+            100% {
+                background-position: 0%;
+            }
+        }
+    }
+}
