contact-me section finished

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,5 +4,8 @@ $white: #E5E5E5;
 $pureWhite: #ffffff;
 $gradient1: #2b1055;
 $gradient2 : #7597de;
+$border1 : #2361c1;
+$border2: #00f96c;
+$formBoxShadow: #719ECE;
 $fontFamily1: 'Open Sans', sans-serif;
 $fontFamily2: 'Montserrat', sans-serif;
