--- a/styles/style.css
+++ b/styles/style.css
@@ -473,6 +473,8 @@ header::before {
   display: -ms-grid;
   display: grid;
   place-items: center;
+  -webkit-box-shadow: 0 0 20px #719ECE;
+          box-shadow: 0 0 20px #719ECE;
 }
 
 .circle-bars-container .circle-bar-container .circle-bar__progress::before {
@@ -578,14 +580,37 @@ header::before {
   height: 0%;
   left: 0;
   bottom: 0;
+  margin-left: 13rem;
   background: #161240;
-  -webkit-transition: 1s;
-  transition: 1s;
-  border-radius: 50% 50% 0 0;
+  -webkit-transition: 1.2s;
+  transition: 1.2s;
+  border-radius: 30rem 30rem 0 0;
 }
 
 .contact-me .contact-form #form-submit-btn:hover::before {
-  height: 150%;
+  height: 200%;
+  -webkit-transform: translateX(-8rem);
+          transform: translateX(-8rem);
+}
+
+.contact-me .contact-form #form-submit-btn::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 0%;
+  right: 0;
+  top: 0;
+  margin-right: 13rem;
+  background: #161240;
+  -webkit-transition: 1.2s;
+  transition: 1.2s;
+  border-radius: 0 0 30rem 30rem;
+}
+
+.contact-me .contact-form #form-submit-btn:hover::after {
+  height: 200%;
+  -webkit-transform: translateX(8rem);
+          transform: translateX(8rem);
 }
 
 .footer {
